Static web, Vercel.json

--- a/public/Index.html
+++ b/public/Index.html
@@ -166,12 +166,12 @@
     <div class="construction-card">
         <!-- logo from public folder (logo.png) -->
         <div class="logo-wrapper">
-            <img src="./public/logo.png" alt="Company logo" onerror="this.onerror=null; this.src='data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22240%22%20height%3D%22120%22%20viewBox%3D%220%200%20240%20120%22%3E%3Crect%20width%3D%22240%22%20height%3D%22120%22%20fill%3D%22%230B1A33%22%2F%3E%3Ctext%20x%3D%2230%22%20y%3D%2270%22%20font-family%3D%22monospace%22%20font-size%3D%2222%22%20fill%3D%22%23FFD966%22%3Elogo.png%3C%2Ftext%3E%3C%2Fsvg%3E';">
+            <img src="logo.png" alt="Company logo" onerror="this.onerror=null; this.src='data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22240%22%20height%3D%22120%22%20viewBox%3D%220%200%20240%20120%22%3E%3Crect%20width%3D%22240%22%20height%3D%22120%22%20fill%3D%22%230B1A33%22%2F%3E%3Ctext%20x%3D%2230%22%20y%3D%2270%22%20font-family%3D%22monospace%22%20font-size%3D%2222%22%20fill%3D%22%23FFD966%22%3Elogo.png%3C%2Ftext%3E%3C%2Fsvg%3E';">
             <!-- if logo.png is missing, a subtle placeholder appears (keeps layout) -->
         </div>
 
         <!-- main title: under construction (bilingual vibe but primarily english) -->
-        <h1>🚧 UNDER CONSTRUCTION 🚧</h1>
+        <h1>🚧UNDER CONSTRUCTION</h1>
 
         <!-- english phrase with yellow + white parts exactly as requested -->
         <div class="message-line">
@@ -179,7 +179,7 @@
             <span class="yellow-part">a better service</span>
         </div>
 
-        <!-- decorative yellow/white bars (optional but lindo) -->
+        <!-- decorative yellow/white bars-->
         <div class="bar">
             <span></span>
             <span></span>
